[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/UI/button_selected.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/button_unpressed.png" type="Texture" id=3]
[ext_resource path="res://src/UI/uni0553-webfont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI/win_symbol.png" type="Texture" id=5]
[ext_resource path="res://src/UI/LevelCompleteScreen.gd" type="Script" id=6]
[ext_resource path="res://sound/ui/ui1.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/ui/button_press.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_top = 2
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/icons/ = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_top = 2
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/icons/ = null
Label/styles/normal = null

[sub_resource type="Animation" id=5]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 30 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.882353 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelCompleteScreen" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_bottom = 29.9999
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 248, 108 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Continue" type="TextureButton" parent="Control"]
margin_left = 88.0
margin_top = 80.0
margin_right = 152.0
margin_bottom = 96.0
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 2 )
text = "next level"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Restart" type="TextureButton" parent="Control"]
margin_left = 88.0
margin_top = 100.0
margin_right = 152.0
margin_bottom = 116.0
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "restart"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MainMenu" type="TextureButton" parent="Control"]
margin_left = 88.0
margin_top = 120.0
margin_right = 152.0
margin_bottom = 136.0
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "main menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -60.0
margin_right = 0.5
margin_bottom = 60.0
color = Color( 0.87451, 0.878431, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="ui1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "sounds"

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "sounds"

[connection signal="pressed" from="Control/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_MainMenu_pressed"]
